[package]
name = "nhi"
authors = ["James Ansley"]
keywords = ["nhi"]
description = "A function to check strings against the New Zealand Ministry of Health NHI Validation Routine"
readme = "README.md"
repository = "https://github.com/James-Ansley/rust-nhi/"
license = "MIT"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.9.4"
serde = {version = "1.0", features = ["derive"], optional = true}
